# agent-arch

./: CLAUDE.md  arch-concepts.md  arch-qa.md  arch-summary.md  arch.md  basic.md  mine_dispatch_agent_technical_solution.md  mine_dispatch_agent_technical_solution_consolidated_arch.md  mine_dispatch_agent_technical_solution_consolidated_arch_plugin_principle.md  mine_dispatch_agent_technical_solution_final_converged.md  mine_dispatch_agent_technical_solution_integrated.md  mine_dispatch_agent_technical_solution_with_service_architecture.md  mvp.prompt.md  prompt.chatgpt.for.claude.md  prompt.md  solution.by.gpt.deep.search.md
mine-llm-dispatch-demo/: .env.example  .gitignore  README.md  pyproject.toml
mine-llm-dispatch-demo/app/: __init__.py  main.py  settings.py
mine-llm-dispatch-demo/app/agents/: __init__.py  assistant_agent.py  base.py  diagnose_agent.py  dispatch_agent.py  forecast_agent.py  gatekeeper_agent.py  triage_agent.py
mine-llm-dispatch-demo/app/embeddings/: __init__.py  providers.py
mine-llm-dispatch-demo/app/eval/: __init__.py  offline_quality.py
mine-llm-dispatch-demo/app/execution/: __init__.py  adapter.py
mine-llm-dispatch-demo/app/llm/: __init__.py  client.py  prompts.py
mine-llm-dispatch-demo/app/models/: __init__.py  alarm.py  audit.py  execution.py  proposal.py  telemetry.py
mine-llm-dispatch-demo/docs/: production_execution_plan.md  project_concepts.md
mine-llm-dispatch-demo/scripts/: evaluate_quality.py  run_dev.sh  seed_demo_data.py  smoke_test.py
mine-llm-dispatch-demo/tests/: test_quality.py  test_smoke.py
(+31 files in other folders)
